# aegis-cli

./: .gitignore  BUILD_SUMMARY.md  Cargo.toml  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  docker-compose.yml  proposal.txt  push_to_github.ps1
backend/: .gitignore  README.md  database.py  main.py  models.py
cli/: Cargo.toml  README.md
cli/src/: api.rs  entropy.rs  git.rs  main.rs  scanner.rs
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ScanEventTable.tsx  StatsCard.tsx
frontend/lib/: api.ts
src/: api.rs  config.rs  git.rs  hook.rs  main.rs  scanner.rs
