[package]
name = "aegis-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
git2 = "0.18"
walkdir = "2.3"
indicatif = "0.17" # For progress bars
colored = "2.0"    # For colored output